@@ -1,5 +1,5 @@
 (defn stepdef [regexp, closure]
-  (. cuke4duke.internal.clj.CljLanguage (addStepDefinition regexp, closure)))
+  (. cuke4duke.internal.clj.CljLanguage (addCljStepDefinition regexp, closure)))
 
 (defmacro Before [& forms]
   `(. cuke4duke.internal.clj.CljLanguage (addCljBeforeHook (fn [] ~@forms))))
