@@ -1,3 +1,8 @@
+== In Git
+
+=== New Features
+* Before hooks are working in Clojure. (Stu Halloway and Aslak Hellesøy)
+
 == 0.1.8 2009-11-03
 
 Several exciting news in this release - transforms, calling of steps from step definitions
